# bioimage-coder

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: compile-cpp.yml
apps/: main.cpp  master_task.cpp  master_task.h  meson.build
apps/amgen2019-full/: main_protocol.hpp
apps/lucy-richardson-deconvolution/: main_protocol.hpp
apps/transport-of-intensity-equation/: main_protocol.hpp
bioimage-coder-dsl/: meson.build
bioimage-coder-dsl/inc/bioimage-coder/: executor.hpp  repeat-for.hpp
bioimage-coder-dsl/src/: export-plantuml.cpp
common/: constants.h
hardware_drivers/: meson.build
hardware_drivers/inc/: mock_usb.h
hardware_drivers/src/: mock_usb.cpp
hardware_drivers/tests/: test-mock-usb.cpp
message_router/: meson.build
message_router/inc/: frame-capture-card-impl.hpp  frame-capture-card.h  message_router.h
message_router/src/: laser.hpp  led_matrix.hpp  message_router_impl.cpp  motion.hpp
message_router/tests/: test-frame-capture.cpp
messages/: meson.build
messages/inc/: fiber-messages.h  frame-commands.h  frame-header.h  messages.h
subprojects/: nonstd-span-lite.wrap
workers/: meson.build
workers/inc/: file_write_worker.h  image_capture_worker.h  timer_interrupt.hpp
workers/src/: file_write_worker.cpp  image_capture_worker.cpp
workers/tests/: test-coop-frame-capture.cpp
